# token-fairness

./: .gitignore  CHECKPOINT_step-1-ears.md  Cargo.toml  README.md
.claude-plugin/: marketplace.json
.github/workflows/: release.yml  verify.yml
assets/: dashboard.html
crates/tf-cli/: Cargo.toml
crates/tf-cli/src/: dashboard_run.rs  main.rs  mcp_server.rs  offpeak_run.rs  oscron.rs
crates/tf-cli/tests/: cli.rs  commands_journal_6.rs  commands_journal_7.rs  mcp.rs  stateful.rs
crates/tf-core/: Cargo.toml
crates/tf-core/src/: budget.rs  calibrate.rs  ceiling.rs  ensemble.rs  estimate.rs  fmt.rs  journal.rs  ledger.rs  lib.rs  mcp.rs  observe.rs  offpeak.rs  registry.rs  report.rs  routing.rs  scheduler.rs  signal.rs  snapshot.rs  spend.rs  state.rs
doc/: FOUNDRY_BRIEFING.md  ROADMAP.md  SPECIFICATION.ears.md  STEP4_GAP_MAP.md  SUBJECT_MATTER_UNDERSTANDING.md  [6-7]_SLASH_COMMANDS_JOURNAL_PLAN.md  [6-7]_commands_journal.feature  completeness-audit.md  cutover.md  token-safety-claude-md.md
doc/design/: spend-safety-enforcement.md
doc/design/adr/: ADR-001-mcp-transport.md  ADR-002-dashboard-architecture.md  ADR-003-telemetry-pipeline.md  ADR-004-chart-rendering.md
doc/original-docs/: SKILL.md  schedule.md  token-aware-scheduling.md
doc/plans/: features-upgrades-plan.md
plugins/scheduler/.claude-plugin/: plugin.json
plugins/scheduler/commands/: schedule.md  tf-help.md  tf-report.md  tf-reset.md
plugins/scheduler/hooks/: hooks.json  (+6 more)
scripts/: verify-prereqs.sh
tests/: conformance.sh  red-team-spend.sh
tests/oracle/: README.md  SOURCE_SHA
(+41 files in other folders)
