[package]
name = "tf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tf"
path = "src/main.rs"

[dependencies]
tf-core = { path = "../tf-core" }
# libc only for the single-instance flock in `run-offpeak` (the OS-cron entry point);
# a single syscall, negligible binary-size cost.
libc = "0.2"

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
